assets/kustomize/public-api/base/ing.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: public-api
  # namespace: public

spec:
  tls:
    - secretName: ssl
      hosts:
        - KUSTOMIZE-DEFINED
  rules:
    - host: KUSTOMIZE-DEFINED
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: public-api
                port:
                  number: 3000
          - path: /graphql
            pathType: Prefix
            backend:
              service:
                name: public-api
                port:
                  number: 3000
